# cohesive

./: .gitignore  README.md  pyproject.toml  requirements.txt
cohesive/: __init__.py  base.py  cohesive.py  encoder.py  segment.py  segmenter.py  utils.py
tests/: test_base.py  test_encoder.py  test_segmenter.py
