[tool.poetry]
name = "cohesive"
version = "0.1.2"
description = "Lightweight Python library that uses sentence embeddings to create naturally coherent segments of text akin to paragraphs."
readme = "README.md"
authors = ["Matthew Dutton <matthewdutton1983@hotmail.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
numpy = "^1.21.2"
python-louvain = "^0.15"
sentence-transformers = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
